--- a/redThon/templates/game.html
+++ b/redThon/templates/game.html
@@ -53,7 +53,7 @@
             position:fixed;
             width:1000px;
             height:1200px;
-            background:green;
+            background-image: url('../static/img/background.png');
             text-align:center;
             color:white;
           }
@@ -61,7 +61,12 @@
           .card_lobby_subject {
             font-size:22pt;
             font-weight:bold;
+            color:black;
             margin:30px;
+          }
+
+          .card_lobby_content {
+            color:black;
           }
     </style>
 </head>
@@ -76,13 +81,13 @@
             3. 짝(문제-답)을 맞춘다.<br/>
 
             <button onclick="game_start();">게임 시작</button>
-            <button>랭킹 보기</button>
+            <button onclick="alert('작업 예정');">랭킹 보기</button>
         </div>
-        <div class="card_lobby_skip"><button>건너뛰기</button></div>
+        <div class="card_lobby_skip"><button onclick="location.href='/';">건너뛰기</button></div>
     </div>
     <!-- 카드게임 -->
-    <div class="card_main" style="display:none;width:1000px;height:1200px;">
-        <div class="flip 1">  
+    <div class="card_main" style="display:none;width:850px;height:1200px;float:left;">
+        <div class="flip 1">
             <div class="card 1">
                 <!-- 앞면 -->
                 <div class="front">1번 문제 카드</div>
@@ -211,6 +216,13 @@
             </div>
         </div>
     </div>
+    <div class="card_main card_lobby_subject" style="display:none;width:300px;height:300px;float:left;">
+        소요 시간: <span id="time_count"></span><br/>
+        클릭 횟수: <span id="click_count"></span><br/>
+
+        <button onclick="location.reload();">다시 하기</button>
+        <button onclick="location.href='/';">게임 종료</button>
+    </div>
     <script>
         var game_status = false;
         var click_count = 0;
@@ -218,6 +230,9 @@
         var total_click = 0;
         var double_check = true;
         var success_num = 0;
+
+        var game_timer;
+        var total_time = 0;
 
         function game_start() {
 
@@ -231,6 +246,11 @@
                     click_element = Array();
                     total_click = 0;
                     $(".card").css("transform", "rotateY(180deg)");
+
+                    game_timer = setInterval(function(){
+                        total_time += 1;
+                        $("#time_count").html(total_time+"초");
+                    }, 1000);
                 }, 3000);
             }
         }
@@ -239,13 +259,13 @@
             $(this).attr("disabled", true);
             if(double_check) {
                 if(game_status) {
-                    total_click++;
                     if(click_count == 0) {
-                        alert("1");
                         $(this).css("transform", "");
                         click_element.push($(this));
                         click_count = 1;
                     } else if(click_count == 1) {
+                        total_click++;
+                        $("#click_count").html(total_click);
                         $(this).css("transform", "");
                         click_element.push($(this));
                         card_success_check();
@@ -267,10 +287,14 @@
                     click_element[1].children(".front").css("background-image", "url('../static/img/success_img"+success_num+".png')");
                     //click_element[0].children(".front").css("background", "green");
                     //click_element[1].children(".front").css("background", "green");
-
+                    
+                    
                     if(success_num == 8) {
-                        alert("게임 클리어!\n총 클릭 횟수:"+total_click);
+                        alert("GAME CLEAR!");
+                        clearTimeout(game_timer);
+                        total_time = 0;
                     }
+                    
                 } else {
                     click_element[0].css("transform", "rotateY(180deg)");
                     click_element[1].css("transform", "rotateY(180deg)");
@@ -281,6 +305,7 @@
                 double_check = true;
             }, 1000);
         }
+
     </script>
 </body>
 </html>
