--- a/redThon/templates/game.html
+++ b/redThon/templates/game.html
@@ -101,7 +101,7 @@
         <div class="flip 1">
             <div class="card 1">
                 <!-- 앞면 -->
-                <div class="front">1번 문제 카드</div>
+                <div class="front">변수</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -109,7 +109,7 @@
         <div class="flip 3">  
             <div class="card 3">
                 <!-- 앞면 -->
-                <div class="front">3번 정답 카드</div>
+                <div class="front">실수형 변수</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -117,7 +117,7 @@
         <div class="flip 3">  
             <div class="card 3">
                 <!-- 앞면 -->
-                <div class="front">3번 문제 카드</div>
+                <div class="front">float</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -125,7 +125,7 @@
         <div class="flip 8">  
             <div class="card 8">
                 <!-- 앞면 -->
-                <div class="front">8번 정답 카드</div>
+                <div class="front">[ B 를 A 에 저장한다 ]<br/>변수에 값을 저장할 때 사용해요</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -133,7 +133,7 @@
         <div class="flip 2">  
             <div class="card 2">
                 <!-- 앞면 -->
-                <div class="front">2번 문제 카드</div>
+                <div class="front">int</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -141,7 +141,7 @@
         <div class="flip 5">  
             <div class="card 5">
                 <!-- 앞면 -->
-                <div class="front">5번 문제 카드</div>
+                <div class="front">함수</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -149,7 +149,7 @@
         <div class="flip 6">  
             <div class="card 6">
                 <!-- 앞면 -->
-                <div class="front">6번 정답 카드</div>
+                <div class="front">출력 함수</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -157,7 +157,7 @@
         <div class="flip 1">  
             <div class="card 1">
                 <!-- 앞면 -->
-                <div class="front">1번 정답 카드</div>
+                <div class="front">데이터 값을 저장하는 박스</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -165,7 +165,7 @@
         <div class="flip 8">  
             <div class="card 8">
                 <!-- 앞면 -->
-                <div class="front">8번 문제 카드</div>
+                <div class="front">대입연산자<br/>A = B</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -173,7 +173,7 @@
         <div class="flip 7">  
             <div class="card 7">
                 <!-- 앞면 -->
-                <div class="front">7번 정답 카드</div>
+                <div class="front">print() 함수의 줄바꿈 문자</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -181,7 +181,7 @@
         <div class="flip 2">  
             <div class="card 2">
                 <!-- 앞면 -->
-                <div class="front">2번 정답 카드</div>
+                <div class="front">정수형 변수</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -189,7 +189,7 @@
         <div class="flip 4">  
             <div class="card 4">
                 <!-- 앞면 -->
-                <div class="front">4번 문제 카드</div>
+                <div class="front">str</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -197,7 +197,7 @@
         <div class="flip 5">  
             <div class="card 5">
                 <!-- 앞면 -->
-                <div class="front">5번 정답 카드</div>
+                <div class="front">일정한 동작을 수행하는 코드</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -205,7 +205,7 @@
         <div class="flip 6">  
             <div class="card 6">
                 <!-- 앞면 -->
-                <div class="front">6번 문제 카드</div>
+                <div class="front">print()</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -213,7 +213,7 @@
         <div class="flip 4">  
             <div class="card 4">
                 <!-- 앞면 -->
-                <div class="front">4번 정답 카드</div>
+                <div class="front">문자열</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -221,7 +221,7 @@
         <div class="flip 7">  
             <div class="card 7">
                 <!-- 앞면 -->
-                <div class="front">7번 문제 카드</div>
+                <div class="front">end = ''</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
