--- a/redThon/templates/game.html
+++ b/redThon/templates/game.html
@@ -32,7 +32,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            color: #fff;
+            color: black;
+            font-weight:bold;
+            font-size:20px;
+            word-break:keep-all;
+            text-align:center;
           }
 
           .front {
@@ -125,7 +129,7 @@
         <div class="flip 8">  
             <div class="card 8">
                 <!-- 앞면 -->
-                <div class="front">[ B 를 A 에 저장한다 ]<br/>변수에 값을 저장할 때 사용해요</div>
+                <div class="front">&nbsp;B 를 A 에 저장한다&nbsp;</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -157,7 +161,7 @@
         <div class="flip 1">  
             <div class="card 1">
                 <!-- 앞면 -->
-                <div class="front">데이터 값을 저장하는 박스</div>
+                <div class="front">&nbsp;데이터 값을 저장하는 박스&nbsp;</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -173,7 +177,7 @@
         <div class="flip 7">  
             <div class="card 7">
                 <!-- 앞면 -->
-                <div class="front">print() 함수의 줄바꿈 문자</div>
+                <div class="front">&nbsp;print() 함수의 줄바꿈 문자&nbsp;</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
@@ -197,7 +201,7 @@
         <div class="flip 5">  
             <div class="card 5">
                 <!-- 앞면 -->
-                <div class="front">일정한 동작을 수행하는 코드</div>
+                <div class="front">&nbsp;일정한 동작을 수행하는 코드&nbsp;</div>
                 <!-- 뒷면 -->
                 <div class="back">?</div>
             </div>
