최종라운드(13,14,15) 프론트 작업중

--- a/redThon/templates/test_image.html
+++ b/redThon/templates/test_image.html
@@ -66,12 +66,10 @@
     <a href="{{ url_for('game') }}"><img id="cookie12" src="../static/img/cookie12.png" onClick="move_cookie12()"
     style="position: absolute;  left: 58%; top: 30%;" 
     width=9.5% height=17%  alt ="cookie12.png"></a>
-    <img id="cookie13" src="../static/img/cookie13.png" onClick="move_cookie13()"
-    style="position: absolute; left: 57%; top: 15%;" 
-    width=7% height=13%  alt ="cookie13.png">
-    <img id="cookie14" src="../static/img/cookie14.png" onClick="move_cookie14()"
-    style="position: absolute;  left: 46%; top: 13%;" 
-    width=7% height=14%  alt ="cookie14.png">
+      
+    <a href="{{ url_for('finalStudy1') }}"><img id="cookie13" src="../static/img/cookie13.png" onClick="move_cookie13()"style="position: absolute; left: 57%; top: 15%;" width=7% height=13%  alt ="cookie13.png"></a>
+    
+    <a href="{{ url_for('finalStudy2') }}"><img id="cookie14" src="../static/img/cookie14.png" onClick="move_cookie14()" style="position: absolute;  left: 46%; top: 13%;" width=7% height=14%  alt ="cookie14.png"></a>
     <img id="cookie15" src="../static/img/cookie15.png" onClick="move_cookie15()"
     style="position: absolute; left: 37%; top: 15%;" 
     width=7% height=12.5%  alt ="cookie15.png">
