원정선 폰트 작업

--- a/redThon/templates/cardStudy.html
+++ b/redThon/templates/cardStudy.html
@@ -8,8 +8,12 @@
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="../static/swiper.min.css">
+    <link rel="stylesheet" href="../static/font_style.css">
     <script src="../static/swiper.min.js"></script>
     <style>
+    * {
+        font-family: "BMJUA";
+    }
     .swiper-container {
         width: 100%;
         height: 100%;
